# rdm

./: CHANGELOG.md  LICENSE  README.md  fourmolu.yaml  gcl.cabal  rcc.cabal  rdm.cabal
app/: App.hs  Main.hs
examples/: DB1.rsl  List.rsl  add_one.gcl  array.gcl  asm_embed.gcl  database.rsl  election_database.rsl  first_array.gcl  hello_world.gcl  implication.gcl  insertion_sort.gcl  max.gcl  merge_sort.gcl  simple.gcl  simple_array.gcl  swap.gcl  toten.gcl
src/: Error.hs  Eval.hs  EvalMonad.hs  Expressions.hs  IRMonad.hs  Language.hs  MIX.hs  MMIX.hs  Main.hs  Parser.hs  Semantics.hs  SemanticsMonad.hs  TAL.hs
