cabal-version:      3.0
name:               gcl
version:            0.0.0.1
synopsis:           Guarded Command Language
homepage:           https://github.com/ih1d/gcl
bug-reports:        https://github.com/ih1d/gcl/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.edu
-- copyright:
category:           Language
extra-source-files: 
    CHANGELOG.md

common warnings
    ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans -Wno-error=unrecognised-warning-flags

library
    import:
        warnings
    exposed-modules:
        Parser
        Semantics
    other-modules:
        Language
        Expressions
        SemanticsMonad
        Error
    default-extensions:
        ImportQualifiedPost
    build-depends:    base >=4 && <5
                    , parsec
                    , transformers
                    , mtl
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010

executable gcl
    import:
        warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4 && <5
                    , gcl
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
