cabal-version:      3.0
name:               rdm
version:            0.0.0.1
synopsis:           RAISE Development Method
homepage:           https://github.com/isaac025/rdm
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.com
category:           Language
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        TypeChecker
        Parser
    default-extensions:
        ImportQualifiedPost
        OverloadedStrings
    other-modules:
        Language
        Semantics
        Expressions
    build-depends:    base >=4 && <5
                    , parsec
                    , text
                    , mtl
                    , transformers
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable rdm
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4 && <5
                    , rdm
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
