cabal-version:      3.0
name:               rdm
version:            0.0.0.1
synopsis:           The RAISE Development Method
homepage:           https://github.com/ih1d/rdm
bug-reports:        https://github.com/ih1d/rdm/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.edu
category:           Language
extra-source-files: 
    CHANGELOG.md

common warnings
executable rdm
    ghc-options: 
        -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
        -Wno-error=unrecognised-warning-flags 
    main-is:
        Main.hs
    other-modules:
        Parser
        Language
        Expressions
        Error
    default-extensions:
        ImportQualifiedPost
        OverloadedStrings
    build-depends:    base
                    , containers
                    , parsec
                    , transformers
                    , mtl
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
